// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ghost going down puts label above it 1`] = `
<svg
  role="img"
  style={
    {
      "height": 36,
      "width": 40,
    }
  }
  viewBox="-20 -23.5 40 36"
>
  <title>
    Vehicle Status Icon
  </title>
  <g
    className="c-vehicle-icon c-vehicle-icon--medium ghost early-red"
  >
    <rect
      className="c-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={40}
      x={-20}
      y={-22.5}
    />
    <text
      className="c-vehicle-icon__label c-vehicle-icon__label--extended"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      ghost
    </text>
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="c-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        strokeLinejoin="round"
      />
      <path
        className="c-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        strokeLinejoin="round"
      />
      <ellipse
        className="c-vehicle-icon__ghost-eye"
        cx="19.73"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
      <ellipse
        className="c-vehicle-icon__ghost-eye"
        cx="35.29"
        cy="22.8"
        rx="3.11"
        ry="3.03"
      />
    </g>
  </g>
</svg>
`;

exports[`ghost with variant doesn't have eyes 1`] = `
<svg
  role="img"
  style={
    {
      "height": 25,
      "width": 27.5,
    }
  }
  viewBox="-13.75 -12.5 27.5 25"
>
  <title>
    Vehicle Status Icon
  </title>
  <g
    className="c-vehicle-icon c-vehicle-icon--medium ghost early-red"
  >
    <g
      transform="scale(0.4375) translate(-24,-23)"
    >
      <path
        className="c-vehicle-icon__ghost-highlight"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        strokeLinejoin="round"
      />
      <path
        className="c-vehicle-icon__ghost-body"
        d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
        strokeLinejoin="round"
      />
    </g>
    <text
      className="c-vehicle-icon__variant"
      dominantBaseline="alphabetic"
      textAnchor="middle"
      x={0}
      y={4.5}
    >
      X
    </text>
  </g>
</svg>
`;

exports[`renders an unwrapped svg node 1`] = `
<svg>
  <g
    className="c-vehicle-icon c-vehicle-icon--medium"
  >
    <rect
      className="c-vehicle-icon__label-background"
      height={11}
      rx={5.5}
      ry={5.5}
      width={40}
      x={-20}
      y={-22.5}
    />
    <text
      className="c-vehicle-icon__label c-vehicle-icon__label--extended"
      dominantBaseline="central"
      textAnchor="middle"
      x="0"
      y={-17}
    >
      label
    </text>
    <path
      className="c-vehicle-icon__triangle"
      d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
      data-testid="vehicle-triangle"
      transform="scale(0.625) rotate(180) translate(-24,-22)"
    />
  </g>
</svg>
`;

exports[`renders extended labels 1`] = `
[
  <svg
    role="img"
    style={
      {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -20 72 64"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={19}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--extended"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        SW-OFF
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 64,
        "width": 72,
      }
    }
    viewBox="-36 -20 72 64"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={72}
        x={-36}
        y={19}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--extended"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        Pull-B
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders ghost with alert icon 1`] = `
[
  <svg
    role="img"
    style={
      {
        "height": 15.72,
        "width": 18.38,
      }
    }
    viewBox="-8.36 -8.120000000000001 18.38 15.72"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small ghost early-red"
    >
      <g
        transform="scale(0.26599999999999996) translate(-24,-23)"
      >
        <path
          className="c-vehicle-icon__ghost-highlight"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <path
          className="c-vehicle-icon__ghost-body"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="19.73"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="35.29"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
      </g>
      <g
        transform="translate(5.7, -3.8) scale(0.16) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 28.525,
      }
    }
    viewBox="-14.775 -12.5 28.525 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium c-vehicle-icon--highlighted ghost early-red"
    >
      <g
        transform="scale(0.4375) translate(-24,-23)"
      >
        <path
          className="c-vehicle-icon__ghost-highlight"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <path
          className="c-vehicle-icon__ghost-body"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="19.73"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="35.29"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
      </g>
      <g
        transform="translate(-9.375, -6.25) scale(0.2) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--highlighted"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
]
`;

exports[`renders in all directions and sizes 1`] = `
[
  <svg
    role="img"
    style={
      {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 15.2,
        "width": 16.72,
      }
    }
    viewBox="-8.36 -7.6 16.72 15.2"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 16.72,
        "width": 15.2,
      }
    }
    viewBox="-7.6 -8.36 15.2 16.72"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 27.5,
        "width": 25,
      }
    }
    viewBox="-12.5 -13.75 25 27.5"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 40,
        "width": 44,
      }
    }
    viewBox="-22 -20 44 40"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 44,
        "width": 40,
      }
    }
    viewBox="-20 -22 40 44"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with all statuses 1`] = `
[
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium on-time early-red"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium early early-red"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium late early-red"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium off-course early-red"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium ghost early-red"
    >
      <g
        transform="scale(0.4375) translate(-24,-23)"
      >
        <path
          className="c-vehicle-icon__ghost-highlight"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <path
          className="c-vehicle-icon__ghost-body"
          d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
          strokeLinejoin="round"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="19.73"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
        <ellipse
          className="c-vehicle-icon__ghost-eye"
          cx="35.29"
          cy="22.8"
          rx="3.11"
          ry="3.03"
        />
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 25,
        "width": 27.5,
      }
    }
    viewBox="-13.75 -12.5 27.5 25"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
    </g>
  </svg>,
]
`;

exports[`renders with variants, labels, and alert icons 1`] = `
[
  <svg
    role="img"
    style={
      {
        "height": 26.200000000000003,
        "width": 26,
      }
    }
    viewBox="-13 -7.6 26 26.200000000000003"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={6.6}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.1}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(0) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={5.6}
      >
        X
      </text>
      <g
        transform="translate(4.94, -1.9) scale(0.16) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 27.72,
        "width": 26,
      }
    }
    viewBox="-13 -8.36 26 27.72"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={7.359999999999999}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(90) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-5.6}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(1.9, 4.94) scale(0.16) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 26.200000000000003,
        "width": 26,
      }
    }
    viewBox="-13 -18.6 26 26.200000000000003"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={-17.6}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-12.100000000000001}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(180) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-5.6}
      >
        X
      </text>
      <g
        transform="translate(-4.94, 1.9) scale(0.16) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 28.62,
        "width": 26,
      }
    }
    viewBox="-13 -9.260000000000002 26 28.62"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--small"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={7.359999999999999}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={12.86}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.38) rotate(270) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={5.6}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(-1.9, -4.94) scale(0.16) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 36,
        "width": 27.9,
      }
    }
    viewBox="-13.75 -12.5 27.9 36"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={11.5}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={17}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(0) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={8.5}
      >
        X
      </text>
      <g
        transform="translate(8.75, 1.875) scale(0.2) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 38.5,
        "width": 26,
      }
    }
    viewBox="-13 -13.75 26 38.5"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={12.75}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(90) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-8.5}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(-1.875, 8.75) scale(0.2) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 36,
        "width": 27.9,
      }
    }
    viewBox="-14.15 -23.5 27.9 36"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={-22.5}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-17}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(180) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-8.5}
      >
        X
      </text>
      <g
        transform="translate(-8.75, -1.875) scale(0.2) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 38.9,
        "width": 26,
      }
    }
    viewBox="-13 -14.15 26 38.9"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--medium"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={11}
        rx={5.5}
        ry={5.5}
        width={26}
        x={-13}
        y={12.75}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={18.25}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(0.625) rotate(270) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={8.5}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(1.875, -8.75) scale(0.2) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 64,
        "width": 64,
      }
    }
    viewBox="-32 -20 64 64"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={19}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={31}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(0) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="alphabetic"
        textAnchor="middle"
        x={0}
        y={14}
      >
        X
      </text>
      <g
        transform="translate(14, 3) scale(0.3) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 68,
        "width": 64,
      }
    }
    viewBox="-32 -22 64 68"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={21}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(90) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="start"
        x={-14}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(-3, 14) scale(0.3) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 64,
        "width": 64,
      }
    }
    viewBox="-32 -44 64 64"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={-43}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={-31}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(180) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="hanging"
        textAnchor="middle"
        x={0}
        y={-14}
      >
        X
      </text>
      <g
        transform="translate(-14, -3) scale(0.3) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
  <svg
    role="img"
    style={
      {
        "height": 68.1,
        "width": 64,
      }
    }
    viewBox="-32 -22.1 64 68.1"
  >
    <title>
      Vehicle Status Icon
    </title>
    <g
      className="c-vehicle-icon c-vehicle-icon--large"
    >
      <rect
        className="c-vehicle-icon__label-background"
        height={24}
        rx={12}
        ry={12}
        width={64}
        x={-32}
        y={21}
      />
      <text
        className="c-vehicle-icon__label c-vehicle-icon__label--normal"
        dominantBaseline="central"
        textAnchor="middle"
        x="0"
        y={33}
      >
        0617
      </text>
      <path
        className="c-vehicle-icon__triangle"
        d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        data-testid="vehicle-triangle"
        transform="scale(1) rotate(270) translate(-24,-22)"
      />
      <text
        className="c-vehicle-icon__variant"
        dominantBaseline="central"
        textAnchor="end"
        x={14}
        y={0}
      >
        X
      </text>
      <g
        transform="translate(3, -14) scale(0.3) translate(-24, -24)"
      >
        <g
          className="c-icon-alert-circle--black"
        >
          <circle
            className="c-icon-alert-circle__outline"
            cx="24"
            cy="24"
            r="27"
          />
          <circle
            className="c-icon-alert-circle__fill"
            cx="24"
            cy="24"
            r="22.59"
          />
          <g
            className="c-icon-alert-circle__exclamation-point"
          >
            <path
              d="m20.39 4.42h7.22a1.81 1.81 0 0 1 1.49 2.11l-1.49 23.22a1.73 1.73 0 0 1 -1.49 1.78h-4.24a1.73 1.73 0 0 1 -1.49-1.78l-1.49-23.22c-.07-1.13.61-2.11 1.49-2.11"
            />
            <path
              d="m21.57 34.54h4.87a1.88 1.88 0 0 1 1.82 1.93v5.17a1.89 1.89 0 0 1 -1.82 1.94h-4.87a1.89 1.89 0 0 1 -1.83-1.94v-5.17a1.88 1.88 0 0 1 1.83-1.93"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>,
]
`;
